...
                child: Row(
                  mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                  children: [
                    //Navigates to roster page
                    menuButton(
                        context,
                        "Roster",
                        () => Roster(InstitutionInfo(
                            widget.institutionName, widget.institutionAddress)),
                        2),
                    //idx 2: is the position of roster icon in list of icon categories
                    SizedBox(width: 50),
                    //Navigates to preset page page
                    menuButton(
                        context,
                        "Preset",
                        () => Roster(InstitutionInfo(
                            widget.institutionName, widget.institutionAddress)),
                        0, WIP: true),
                    //idx 0: is the position of preset icon in list of icon categories
                  ],
                )),
...
                  children: [
                    //most of the buttons do not navigate anywhere and have null as their navigation parameter

                    //Navigates to view data page
                    menuButton(
                        context,
                        "View Data",
                        () => ViewDataPage(
                            widget.institutionName, widget.institutionAddress),
                        3),
                    //idx 3: is the position of View Data icon in list of icon categories
                    SizedBox(width: 50),
                    //Navigates to Input data
                    menuButton(
                        context,
                        "Input Data",
                        () => FoodStatusPage(InstitutionInfo(
                            widget.institutionName, widget.institutionAddress)),
                        1),
                    //idx 1: is the position of preset Input in list of icon categories
                  ],
                )),
...
