...
//used if the database breaks, a bandaid solution to allow me to go to any screen nessessary
Widget quickfixButton(BuildContext context) {
  return InkWell(
      onTap: () {
        // pass the name of the clicked on institution to the daycare screen
        //Navigator.push(context, MaterialPageRoute(builder: (context) {
        //  return MyHome("test");
        //}));
      },
      child: Icon(
        Icons.edit,
        size: 50.0,
      ));
...
